Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-20693

When using Add Qt Sources to map the Qt sources, the default path given is incorrect

    XMLWordPrintable

Details

    • Linux/X11
    • ada0e43c93199dbf54add275c1320d33c7c2bc9a (qt-creator/qt-creator/4.8)

    Description

      When using Add Qt Sources to map the Qt sources, the default path given is incorrect. The path it supplies is /var/tmp/qt-src whereas, for Qt 5.11.0 at least, it is looking for it at /home/qt/work/qt.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            hjk hjk
            andysh Andy Shaw
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes